syntax = "proto3";

option go_package = "github.com/ProjectSMAA/backend/commons/protos";

package protos;


service UserService {
    rpc RegisterUser(UserRegisterRequest) returns (UserRegisteredResponse){}
    rpc CheckUserExistance(UserRequest) returns (UserResponse) {}
}

message  UserRegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}
message  UserRegisteredResponse {
    string  id = 1;
    string username = 2;
    string email = 3;
    string status = 4;
}
message UserRequest {
    string email = 1;
}

message UserResponse {
    bool exists = 1;
}
